feat: CommandInfo contains enum value instead of string